--- a/client/app1/package.json
+++ b/client/app1/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
