--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
     "form-data": "^4.0.0",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.6.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "process": "^0.11.10"
   }
 }
